--- a/app-extension/package.json
+++ b/app-extension/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "type": "module",
   "dependencies": {
-    "quasar-ui-qinputex": "latest"
+    "quasar-ui-qinputex": "^0.0.1"
   },
   "engines": {
     "node": ">= 8.9.0",
