--- a/ui/package.json
+++ b/ui/package.json
@@ -18,24 +18,24 @@
     "build:css": "node build/script.css.js"
   },
   "devDependencies": {
-    "autoprefixer": "^10.0.2",
-    "cssnano": "^4.1.10",
-    "postcss": "^8.1.9",
-    "rtlcss": "^2.6.1",
-    "sass": "^1.33.0",
-    "quasar": "^2.16.0",
-    "@quasar/extras": "^1.16.4",
-    "core-js": "^3.0.0",
     "@quasar/app-webpack": "^3.13.0",
-    "open": "^7.3.0",
-    "fs-extra": "^8.1.0",
-    "chalk": "^4.1.0",
-    "rimraf": "^3.0.0",
-    "rollup": "^2.45.0",
+    "@quasar/extras": "^1.16.4",
     "@rollup/plugin-buble": "^0.21.3",
     "@rollup/plugin-json": "^4.0.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-replace": "^2.4.2",
+    "autoprefixer": "^10.0.2",
+    "chalk": "^4.1.0",
+    "core-js": "^3.0.0",
+    "cssnano": "^4.1.10",
+    "fs-extra": "^8.1.0",
+    "open": "^7.3.0",
+    "postcss": "^8.1.9",
+    "quasar": "^2.16.0",
+    "rimraf": "^3.0.0",
+    "rollup": "^2.45.0",
+    "rtlcss": "^2.6.1",
+    "sass": "^1.33.0",
     "uglify-js": "^3.13.3",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0",
@@ -50,5 +50,8 @@
     "last 4 ChromeAndroid versions",
     "last 4 FirefoxAndroid versions",
     "last 4 iOS versions"
-  ]
+  ],
+  "dependencies": {
+    "lodash.merge": "^4.6.2"
+  }
 }
