--- a/app-extension/package.json
+++ b/app-extension/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "type": "module",
   "dependencies": {
-    "quasar-ui-qinputex": "^0.0.1"
+    "quasar-ui-qinputex": "^0.0.1",
+    "@quasar/app-vite": "^2.0.0"
   },
   "engines": {
     "node": ">= 8.9.0",
