--- a/ui/package.json
+++ b/ui/package.json
@@ -4,42 +4,35 @@
   "author": "Riceball LEE <snowyu.lee@gmail.com>",
   "description": "Quasar UI component for an advanced text input with various input types and customizable attachments.",
   "license": "MIT",
-  "module": "dist/index.esm.js",
-  "main": "dist/index.common.js",
+  "module": "dist/index.js",
+  "main": "dist/index.umd.js",
   "scripts": {
-    "dev": "cd dev && yarn dev && cd ..",
-    "dev:umd": "yarn build && node build/script.open-umd.js",
-    "dev:ssr": "cd dev && yarn 'dev:ssr' && cd ..",
-    "dev:ios": "cd dev && yarn 'dev:ios' && cd ..",
-    "dev:android": "cd dev && yarn 'dev:android' && cd ..",
-    "dev:electron": "cd dev && yarn 'dev:electron' && cd ..",
-    "build": "node build/index.js",
-    "build:js": "node build/script.javascript.js",
-    "build:css": "node build/script.css.js"
+    "dev": "cd dev && quasar dev && cd ..",
+    "dev:umd": "yarn build && open umd-test.html",
+    "dev:ssr": "cd dev && quasar dev -m ssr && cd ..",
+    "dev:ios": "cd dev && quasar dev -m ios && cd ..",
+    "dev:android": "cd dev && quasar dev -m android && cd ..",
+    "dev:electron": "cd dev && quasar dev -m electron && cd ..",
+    "build": "node sync-app-ext.js && vite build"
   },
   "devDependencies": {
-    "@quasar/app-webpack": "^4.2.1",
+    "@quasar/app-vite": "^2.2.1",
     "@quasar/extras": "^1.17.0",
-    "@rollup/plugin-buble": "^1.0.3",
-    "@rollup/plugin-json": "^6.1.0",
-    "@rollup/plugin-node-resolve": "^16.0.1",
-    "@rollup/plugin-replace": "^6.0.2",
+    "@vitejs/plugin-vue": "^5.0.5",
     "autoprefixer": "^10.4.21",
     "chalk": "^5.4.1",
-    "core-js": "^3.43.0",
     "cssnano": "^7.0.7",
     "fs-extra": "^11.3.0",
     "open": "^10.1.2",
     "postcss": "^8.5.6",
     "quasar": "^2.18.1",
     "rimraf": "^6.0.1",
-    "rollup": "^4.44.2",
     "rtlcss": "^4.3.0",
     "sass": "^1.89.2",
-    "uglify-js": "^3.19.3",
+    "typescript": "^5.8.3",
+    "vite": "^5.3.3",
     "vue": "^3.5.17",
-    "vue-router": "^4.5.1",
-    "zlib": "^1.0.5"
+    "vue-router": "^4.5.1"
   },
   "browserslist": [
     "last 4 Chrome versions",
