--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -11,6 +11,6 @@
     "lib": ["esnext", "dom"],
     "types": ["vite/client", "node", "vue"]
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.js", "src/**/*.vue"],
   "exclude": ["node_modules", "dist"]
 }
